Add: basic readme

--- a/app/views/index.html.twig
+++ b/app/views/index.html.twig
@@ -204,14 +204,16 @@ $.ajax({
             </div>
             <div class="builder">
                 <h3>Developed</h3>
-                <a href="http://twitter.com/solewolf1993"><img src="img/creator_keith.png" width="80px" alt="Developed by Keith" /></a>
+                <a href="http://twitter.com/KPhoen"><img src="http://files.kevingomez.fr/avatar.jpg" width="80px" alt="Developed by Kévin Gomez" /></a>
             </div>
         </div>
 
+        <!--
         <div class="block">
             <h3>Copyright Notice</h3>
             <p>All randomly generated photos are copyrighted under a <a href="http://creativecommons.org/licenses/by-nc-sa/2.0/deed.en">Creative Commons BY-NC-SA 2.0</a> license. These photos were hand picked from Greg Peverill-Conti's <a href="http://www.flickr.com/photos/gregpc/">1,000 faces project</a>.</p>
         </div>
+        -->
     </div>
 </footer>
 
