--- a/app/views/index.html.twig
+++ b/app/views/index.html.twig
@@ -186,7 +186,7 @@ $.ajax({
     </p>
     <pre>{{ app.url_generator.generate('users_single', {}, true) }}<span>?seed=42</span></pre>
 
-    <p>(note that the seed will override the gender parameter)</p>
+    <p>(note that giving a seed disable the values overriding feature)</p>
 
     <!--
     <ul class="social">
@@ -212,12 +212,10 @@ $.ajax({
             </div>
         </div>
 
-        <!--
         <div class="block">
             <h3>Copyright Notice</h3>
             <p>All randomly generated photos are copyrighted under a <a href="http://creativecommons.org/licenses/by-nc-sa/2.0/deed.en">Creative Commons BY-NC-SA 2.0</a> license. These photos were hand picked from Greg Peverill-Conti's <a href="http://www.flickr.com/photos/gregpc/">1,000 faces project</a>.</p>
         </div>
-        -->
     </div>
 </footer>
 
